force-app/main/default/objects/CampaignMember/fields/Leadership_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Leadership_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Use this field to lookup Campaign Events</description>
    <label>Campaign Events</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Campaign.RecordType.DeveloperName</field>
            <operation>contains</operation>
            <value>Leadership</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Campaign Event Members</relationshipLabel>
    <relationshipName>Campaign_Members</relationshipName>
    <type>Lookup</type>
</CustomField>