force-app/main/default/objects/CampaignMember/fields/nd_Ask_Amount_3__c.field-meta.xml
<CustomField>
    <fullName>nd_Ask_Amount_3__c</fullName>
    <label>Ask Amount 3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>