force-app/main/default/objects/CampaignMember/fields/ND_Campaign_Event_Nomination__c.field-meta.xml
<CustomField>
    <fullName>ND_Campaign_Event_Nomination__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Campaign Event Nomination record that resulted in adding this Constituent record to the Campaign Event.</description>
    <inlineHelpText>Lookup to the Campaign Event Nomination record that resulted in adding this Constituent record to the Campaign Event.</inlineHelpText>
    <label>Campaign Event Nomination</label>
    <referenceTo>ND_Campaign_Event_Nomination__c</referenceTo>
    <relationshipLabel>Campaign Members</relationshipLabel>
    <relationshipName>Campaign_Members</relationshipName>
    <type>Lookup</type>
</CustomField>