force-app/main/default/objects/CampaignMember/fields/nd_Campaign_Event_Stage__c.field-meta.xml
<CustomField>
    <fullName>nd_Campaign_Event_Stage__c</fullName>
    <label>Campaign Event Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>nd_Campaign_Event_Stage</valueSetName>
    </valueSet>
</CustomField>