force-app/main/default/objects/CampaignMember/fields/nd_Campaign_Event_Status__c.field-meta.xml
<CustomField>
    <fullName>nd_Campaign_Event_Status__c</fullName>
    <label>Campaign Event Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>nd_Campaign_Event_Stage__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>nd_Campaign_Event_Status</valueSetName>
    </valueSet>
</CustomField>