force-app/main/default/objects/CampaignMember/fields/ND_Campaign_Member_ID__c.field-meta.xml
<CustomField>
    <fullName>ND_Campaign_Member_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <label>Campaign Member ID</label>
    <type>Text</type>
</CustomField>