force-app/main/default/objects/CampaignMember/fields/ND_Campaign_Member_Record_URL__c.field-meta.xml
<CustomField>
    <fullName>ND_Campaign_Member_Record_URL__c</fullName>
    <formula>HYPERLINK(LEFT($Api.Enterprise_Server_URL_510, FIND(&apos;/services&apos;,$Api.Enterprise_Server_URL_510)) &amp; Id, &quot;Record Link&quot;)</formula>
    <label>Campaign Member Record URL</label>
    <type>Text</type>
</CustomField>