force-app/main/default/objects/CampaignMember/fields/ND_Campaign_Name__c.field-meta.xml
<CustomField>
    <fullName>ND_Campaign_Name__c</fullName>
    <formula>Campaign.Name</formula>
    <label>Campaign Name</label>
    <type>Text</type>
</CustomField>