force-app/main/default/objects/CampaignMember/fields/ND_Comment__c.field-meta.xml
<CustomField>
    <fullName>ND_Comment__c</fullName>
    <description>Provide comments related to the Campaign Member.</description>
    <inlineHelpText>Provide comments related to the Campaign Member.</inlineHelpText>
    <label>Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>