force-app/main/default/objects/CampaignMember/fields/ND_End_Date__c.field-meta.xml
<CustomField>
    <fullName>ND_End_Date__c</fullName>
    <formula>Campaign.EndDate</formula>
    <label>End Date</label>
    <type>Date</type>
</CustomField>