force-app/main/default/objects/CampaignMember/fields/ND_Event_Type__c.field-meta.xml
<CustomField>
    <fullName>ND_Event_Type__c</fullName>
    <formula>IF(CONTAINS(Campaign.RecordType.Name, &quot;Leadership&quot;),&quot;Leadership&quot;,&quot;&quot;)</formula>
    <label>Event Type</label>
    <type>Text</type>
</CustomField>