force-app/main/default/objects/CampaignMember/fields/nd_of_Attendees__c.field-meta.xml
<CustomField>
    <fullName>nd_of_Attendees__c</fullName>
    <label># of Attendees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>