force-app/main/default/objects/CampaignMember/fields/ND_Primary_Relationship_Manager__c.field-meta.xml
<CustomField>
    <fullName>ND_Primary_Relationship_Manager__c</fullName>
    <description>Household Primary Relationship Manager</description>
    <formula>Contact.Account.ucinn_ascendv2__PRM__r.FirstName  &amp; &quot; &quot; &amp;  Contact.Account.ucinn_ascendv2__PRM__r.LastName</formula>
    <inlineHelpText>Household Primary Relationship Manager</inlineHelpText>
    <label>Primary Relationship Manager</label>
    <type>Text</type>
</CustomField>