force-app/main/default/objects/CampaignMember/fields/ND_PRM_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>ND_PRM_Email_Address__c</fullName>
    <description>Household Primary Relationship Manager&apos;s Email Address</description>
    <formula>Contact.Account.ucinn_ascendv2__PRM__r.Email</formula>
    <inlineHelpText>Household Primary Relationship Manager&apos;s Email Address</inlineHelpText>
    <label>PRM Email Address</label>
    <type>Text</type>
</CustomField>