force-app/main/default/objects/CampaignMember/fields/nd_Spouse_Attending__c.field-meta.xml
<CustomField>
    <fullName>nd_Spouse_Attending__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field indicates if a spouse attended a past Campaign Event.  This field will not be used for events that go through the Nomination Process in asceND.</description>
    <inlineHelpText>This field indicates if a spouse attended a past Campaign Event.  This field will not be used for events that go through the Nomination Process in asceND.</inlineHelpText>
    <label>Spouse Attending (Historical)</label>
    <type>Checkbox</type>
</CustomField>