force-app/main/default/objects/CampaignMember/fields/ND_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>ND_Start_Date__c</fullName>
    <formula>Campaign.StartDate</formula>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>