force-app/main/default/objects/CampaignMember/recordTypes/Appeal_Member.recordType-meta.xml
<RecordType>
    <fullName>Appeal_Member</fullName>
    <active>true</active>
    <description>Attaches Constituents to Appeal Code</description>
    <label>Appeal Member</label>
</RecordType>