force-app/main/default/objects/CampaignMember/recordTypes/Leadership_Event.recordType-meta.xml
<RecordType>
    <fullName>Leadership_Event</fullName>
    <active>true</active>
    <description>Record type for Campaign Event Members</description>
    <label>Campaign Event</label>
</RecordType>