force-app/main/default/objects/CampaignMember/recordTypes/Participation.recordType-meta.xml
<RecordType>
    <fullName>Participation</fullName>
    <active>true</active>
    <description>Constituent&apos;s participation to Notre Dame Event</description>
    <label>Participation</label>
</RecordType>